-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.1
-
c5bc66df2fd976f4e055c579f6918138d3accd87
Adding a QLabel to the layout of a resizaeable dialog, with wordWrap = true causes the dialog to be sizeable to any size, including sizes that do not display the controls.
I have attached a project with a main window that lets you launch two identical dialogs, with the exception of the wordWrap. One is sizeable but will not let you shrink it beyond a minimum size calculated by the size of the controls. The second, lets you size it down to any size.
Expected:
It is expected the second dialog would not size down to below the size allowing the display of all the controls.
I have attached a QtCreator project. It does the same thing on both Mac and Windows.
- is duplicated by
-
QTBUG-37002 Text clips if widget is resized horizontally.
-
- Closed
-
| For Gerrit Dashboard: QTBUG-37673 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 97687,2 | Respect minimum size of heightForWidth layouts | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |